Issue #25758: Prevents zipimport from unnecessarily encoding a filename (patch by Eryk Sun)